WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96317
[V8] V8AuxiliaryContext used by IDB leaks memory
https://bugs.webkit.org/show_bug.cgi?id=96317
Summary
[V8] V8AuxiliaryContext used by IDB leaks memory
Adam Barth
Reported
2012-09-10 14:21:45 PDT
[V8] V8AuxiliaryContext used by IDB leaks memory
Attachments
Patch
(9.86 KB, patch)
2012-09-10 14:24 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-09-10 14:24:23 PDT
Created
attachment 163209
[details]
Patch
Adam Barth
Comment 2
2012-09-10 14:25:35 PDT
Note: It's a small leak. We just leak one context per thread.
Tony Chang
Comment 3
2012-09-10 14:43:37 PDT
Thanks!
Adam Barth
Comment 4
2012-09-10 14:46:25 PDT
Thanks for the review.
Adam Barth
Comment 5
2012-09-10 16:21:36 PDT
Comment on
attachment 163209
[details]
Patch Clearing flags on attachment: 163209 Committed
r128125
: <
http://trac.webkit.org/changeset/128125
>
Adam Barth
Comment 6
2012-09-10 16:21:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug