[V8] V8AuxiliaryContext used by IDB leaks memory https://bugs.webkit.org/show_bug.cgi?id=96317

Patch by Adam Barth <abarth@chromium.org> on 2012-09-10
Reviewed by Tony Chang.

Source/WebCore:

Before this patch, we leaked m_auxiliaryContext on V8PerIsolateData
because no one ever called Dispose to balance the call to
V8::Context::New. This patch uses ScopedPersistent to call Dispose
automatically.

Also, I've deleted the V8AuxiliaryContext because it just reinvents
V8::Context::Scope.

* bindings/v8/IDBBindingUtilities.cpp:
(WebCore::createIDBKeyFromSerializedValueAndKeyPath):
(WebCore::injectIDBKeyIntoSerializedValue):
* bindings/v8/V8PerIsolateData.cpp:
(WebCore::V8PerIsolateData::ensureAuxiliaryContext):
(WebCore):
* bindings/v8/V8PerIsolateData.h:
(V8PerIsolateData):
* bindings/v8/V8Utilities.cpp:
* bindings/v8/V8Utilities.h:

Source/WebKit/chromium:

Call the V8 APIs directly instead of using a helper class.

* tests/IDBBindingUtilitiesTest.cpp:
(WebCore::TEST):


Canonical link: https://commits.webkit.org/114218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128125 268f45cc-cd09-0410-ab3c-d52691b4dbfc